--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "build": "node build/build.js",
     "nginx-start": "nginx -p . -c nginx.conf",
     "nginx-stop": "nginx -s stop",
-    "nginx-reload": "nginx -s reload"
+    "nginx-reload": "nginx -s reload",
+    "selenium": "webdriver-manager start",
+    "selenium-drivers": "webdriver-manager update"
   },
   "dependencies": {
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
